--- a/app/src/main/res/layout/fragment_profile_navigation_fragment.xml
+++ b/app/src/main/res/layout/fragment_profile_navigation_fragment.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/backkkkkkk"
     tools:context=".Users.ProfileNavigationFragment">
 
 
@@ -11,8 +12,9 @@
         android:id="@+id/civ_in_profile_navigation"
         android:layout_width="133dp"
         android:layout_height="120dp"
-        android:layout_marginTop="88dp"
-        android:layout_marginEnd="124dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="136dp"
+        android:foregroundGravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -20,7 +22,10 @@
         android:id="@+id/username_in_profile_navigation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:fontFamily="sans-serif-medium"
+        android:textAlignment="center"
+        android:textColor="#FD0000"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,6 +46,7 @@
         android:text="Profile settings"
         android:textAllCaps="false"
         android:textColor="@color/black"
+        app:backgroundTint="@color/mainHani"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,6 +66,7 @@
         android:text="Dark mode"
         android:textAllCaps="false"
         android:textColor="@color/black"
+        app:backgroundTint="@color/mainHani"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,6 +77,7 @@
         android:drawableLeft="@drawable/ic_baseline_people_24"
         android:background="@drawable/setting_btn_layout"
         android:textColor="@color/black"
+        app:backgroundTint="@color/mainHani"
         android:textAllCaps="false"
         android:gravity="left|center_vertical"
         android:layout_width="340dp"
@@ -98,6 +106,7 @@
         android:text="Log out"
         android:textAllCaps="false"
         android:textColor="@color/black"
+        app:backgroundTint="@color/mainHani"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,21 +115,22 @@
     <Button
         android:id="@+id/button4"
         android:layout_width="340dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
         android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="48dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="216dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/setting_btn_layout"
         android:drawableLeft="@drawable/ic_baseline_language_24"
         android:gravity="left|center_vertical"
         android:text="Language settings"
         android:textAllCaps="false"
         android:textColor="@color/black"
+        app:backgroundTint="@color/mainHani"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintHorizontal_bias="0.478"
-        app:layout_constraintTop_toBottomOf="@+id/civ_in_profile_navigation" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/civ_in_profile_navigation" />
 
     <Button
         android:id="@+id/searchFrinds"
@@ -136,6 +146,7 @@
         android:text="Search Friends"
         android:textAllCaps="false"
         android:textColor="@color/black"
+        app:backgroundTint="@color/mainHani"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
