--- a/app/src/main/res/layout/fragment_friends_messages.xml
+++ b/app/src/main/res/layout/fragment_friends_messages.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#CAD2D3"
     tools:context=".Chat.FriendsMessagesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
