--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -7,12 +7,45 @@
     android:layout_height="match_parent"
     tools:context=".Chat.CreateGroupActivity">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/create_group_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:elevation="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/create_group_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/white"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:theme="@style/ToolbarThemeBlack">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="25dp"
+                android:layout_marginLeft="25dp"
+                android:text="Creating Group"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+        </androidx.appcompat.widget.Toolbar>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/civ_group_create"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="152dp"
-        android:layout_marginEnd="192dp"
+        android:layout_marginEnd="156dp"
         android:src="@drawable/ic_baseline_group_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,11 +53,12 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/input_layout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="297dp"
-        android:layout_height="89dp"
-        android:layout_marginTop="30dp"
+        android:layout_width="275dp"
+        android:layout_height="92dp"
+        android:layout_marginTop="28dp"
         android:padding="0dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.622"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/civ_group_create">
 
@@ -36,15 +70,15 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_width="313dp"
+        android:layout_height="116dp"
+        android:layout_marginTop="12dp"
         android:padding="5dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.622"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/input_layout">
 
@@ -61,17 +95,26 @@
 
     <Button
         android:id="@+id/create_group_btn"
-        android:layout_width="108dp"
-        android:layout_height="101dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="160dp"
+        android:layout_width="155dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="48dp"
         android:background="@drawable/rounded_btn"
-        android:drawableTop="@drawable/ic_baseline_create_24"
+        android:drawableRight="@drawable/ic_baseline_create_24"
         android:shadowColor="@color/white"
-        android:text="Create Group"
+        android:text="Create"
         android:textAllCaps="false"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="100dp"
+        android:text="Click to choose gorup image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/civ_group_create" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
