--- a/app/src/main/res/layout/tab_bar_layout.xml
+++ b/app/src/main/res/layout/tab_bar_layout.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#FF3D00"
+    android:background="@color/mainHani"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:popupTheme="@style/MenuStyle">
 
