--- a/app/src/main/res/layout/view_eventmarker.xml
+++ b/app/src/main/res/layout/view_eventmarker.xml
@@ -31,14 +31,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="371dp"
-        android:background="@drawable/profile1"
-
+        android:background="@drawable/eveee"
         android:baselineAligned="false"
         android:clickable="false"
         android:filterTouchesWhenObscured="false"
         android:hapticFeedbackEnabled="false"
         android:orientation="vertical"
         android:splitMotionEvents="true">
+
+        <ImageView
+            android:id="@+id/img"
+            android:layout_width="128dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/meet" />
 
         <TextView
             android:id="@+id/capacity"
@@ -53,41 +59,38 @@
             android:textSize="22dp"
             android:textStyle="italic" />
 
-        <ImageView
-            android:id="@+id/img"
-            android:layout_width="74dp"
-            android:layout_height="53dp"
-            android:layout_marginLeft="260dp"
-            android:src="@drawable/even" />
-
         <TextView
             android:id="@+id/description"
-            android:layout_width="338dp"
-            android:layout_height="102dp"
+            android:layout_width="337dp"
+            android:layout_height="161dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="3dp"
-
             android:editable="false"
+            android:fontFamily="serif"
             android:hint="@string/description_box"
             android:inputType="textCapSentences|textMultiLine"
             android:maxLength="1500"
             android:minLines="4"
             android:padding="10dp"
             android:scrollbars="vertical"
-            android:textSize="18sp" />
+            android:textAlignment="textStart"
+            android:textColor="#050505"
+            android:textSize="18sp"
+            android:textStyle="bold|italic" />
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-
+            android:layout_gravity="bottom"
             android:weightSum="2">
 
             <Button
                 android:id="@+id/join"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#2B5B85"
                 android:fontFamily="serif"
@@ -106,6 +109,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#2B5B85"
                 android:fontFamily="serif"
